# nmde-community

./: .goosehints  README.md  boot.sh  hyprland_log.txt  install.sh  logo.txt  objective.md  pyproject.toml
applications/: nmde.desktop  qutebrowser.desktop
composes/: .state  README.md  comfyui-neo.yaml  cvat.yaml  dockge.yaml  evolution_api.yaml  homepage.yaml  jellyfin.yaml  jenkins_cac.yaml  jn.yaml  kanboard.yaml  kasm-workspaces.yaml  kavita.yaml  kokoro.yaml  langflow.yaml  langfuse.yaml  librechat.yaml  litellm.yaml  minio.yaml  mnet.yaml  motioneye.yml  n8n.yaml  neo4j.yaml  ollama.yaml  pgadmin.yaml  pihole-compose.yaml  qbittorrent.yaml  service_consolidation_analysis.md  shared-services.yaml  sonar-radar.yaml  template.yaml  tubearchivist.yml  typebot.yaml  uptime.yml  veloren.yaml  whisper.yaml
composes/env_files/: example.cloudflare.env  example.comfyui-neo.env  example.cvat.env  example.dockge.env  example.evolution_api.env  example.homepage.env  example.jellyfin.env  example.jn.env  example.kasm-workspaces.env  example.kavita.env  example.langflow.env  example.librechat.env  example.litellm.env  example.minio.env  example.mnet.env  example.n8n.env  example.neo4j.env  example.ollama.env  example.pgadmin.env  example.pihole-compose.env  example.qbittorrent.env  example.shared-services.env  example.sonar-radar.env  example.tubearchivist.env  example.typebot.env  example.veloren.env  example.whisper.env
config/: nmde.db
config/alacritty/: alacritty.toml
config/fastfetch/: config.jsonc
default/: bashrc
install/: setup-env.sh  setup-python.sh
(+111 files in other folders)
